# legend_of_mierda

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yaml
assets/cutscenes/: main-menu.pixi
assets/levels/: example.ldtk
assets/levels/example/backups/a3386460-7820-11ed-b6fd-157a63b4d02d_2023-07-16_14-00-12_crash/: example.ldtk
assets/levels/example/backups/a3386460-7820-11ed-b6fd-157a63b4d02d_2024-02-27_19-05-41_crash/: example.ldtk
assets/levels/example/backups/a3386460-7820-11ed-b6fd-157a63b4d02d_2024-02-27_19-06-32_crash/: example.ldtk
assets/models/: biboran.glb
assets/models/old_magical_book/: license.txt  scene.gltf
assets/raw-pixelart/: cutscene-1.pixi  intro.pixi
assets/shaders/: custom_material.wgsl  post_processing.wgsl  repeated.wgsl  vhs.glsl
assets/temp/: pizza
examples/: particles.rs  shaders.rs  sprites.rs
src/: ai.rs  audio.rs  components.rs  controls.rs  cutscene.rs  enemies.rs  events.rs  gameover.rs  gameplay.rs  items.rs  ldtk.rs  loading.rs  main.rs  menu.rs  particles.rs  physics.rs  postprocessing.rs  splashscreen.rs  sprites.rs  systems.rs  ui.rs  utils.rs
src/entities/: biboran.rs  enemies.rs  items.rs  light.rs  mierda.rs  mod.rs  pendejo.rs  pizza.rs  player.rs  text_indicator.rs  weapon_arrow.rs
src/entities/characters/: enemy.rs  mierda.rs  mod.rs  pendejo.rs  psychiatrist.rs
src/entities/items/: biboran.rs  item.rs  mod.rs  pizza.rs
src/entities/level_objects/: light.rs
src/entities/weapons/: machete.rs  mod.rs  pill.rs  speargun.rs  weapon_arrow.rs
src/gameplay/: gameover.rs  mod.rs  scoring.rs  waves.rs
