[package]
name = "legend_of_mierda"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_ecs_ldtk = { version = "0.8", features = [
    "default",
    "derive",
    "atlas",
    "render",
] }
bevy-inspector-egui = "0.19"
bevy_rapier2d = "0.22"
rand = "0.8.5"
pecs = "0.4"
bevy_particle_systems = "0.10"
bevy_asset_loader = "0.17"
bevy_kira_audio = "0.16"
webbrowser = { version = "0.8", features = ["hardened"] }
ffmpeg-next = "6.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]