[package]
name = "legend_of_mierda"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_ecs_ldtk = {git="https://github.com/Trouv/bevy_ecs_ldtk", rev="2ee602f", features = [
    "default",
    "derive",
    "atlas",
    "render",
]}
bevy-inspector-egui = "0.23"
bevy_rapier2d = "0.25"
rand = "0.8.5"
pecs = {git="https://github.com/jkb0o/pecs", rev="38dc92d"}
bevy_particle_systems = "0.12"
bevy_asset_loader = "0.20"
bevy_kira_audio = "0.19"
webbrowser = { version = "0.8", features = ["hardened"] }
ffmpeg-next = "7.0"
bevy-scene-hook = "10.0"
bevy_tweening = "0.10"
bevy_magic_light_2d = {git="https://github.com/zaycev/bevy-magic-light-2d", rev="4a95369"}

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", rev = "25def41" }
